--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <section class="about">
         <div class="container pt-5 pb-5">
           <div class="row gap-5 pt-5">
-            <div class="col-lg-5 col-md-5 mt-5">
+            <div class="col-lg-4 col-md-4 mt-5 col-sm-6">
               <div class="image">
                 <img
                   src="./assests/img/P43H8BA-qli2rq35yoi50zm6bm8mk9u32kflmz119a8swzy2xa.jpg"
@@ -234,7 +234,7 @@
                 />
               </div>
             </div>
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="text pt-5 pb-6 d-flex flex-column">
                 <div class="name">About us</div>
                 <div class="title">
@@ -349,7 +349,7 @@
         </div>
       </section>
 
-      <section class="category">
+      <section class="category container">
         <div class="container mt-5 mb-5">
           <div class="title">Explore by category</div>
           <div class="row mt-5 d-flex justify-content-center">
