--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
       <section class="about">
         <div class="container pt-5 pb-5">
-          <div class="row gap-5 pt-5">
+          <div class="row gap-5 pt-5 d-flex justify-content-center">
             <div class="col-lg-4 col-md-4 mt-5 col-sm-6">
               <div class="image">
                 <img
