--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
       </section>
 
-      <section class="about">
+      <!-- <section class="about">
         <div class="container pt-5 pb-5">
           <div class="row gap-5 pt-5 d-flex justify-content-center">
             <div class="col-lg-4 col-md-4 mt-5 col-sm-6">
@@ -256,7 +256,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="menu">
         <div class="menu-container">
