--- a/index.html
+++ b/index.html
@@ -222,41 +222,39 @@
         </div>
       </section>
 
-      <!-- <section class="about">
-        <div class="container pt-5 pb-5">
-          <div class="row gap-5 pt-5 d-flex justify-content-center">
-            <div class="col-lg-4 col-md-4 mt-5 col-sm-6">
+      <section class="about">
+        <div class="container py-5">
+          <div class="row align-items-center justify-content-center">
+            <div class="col-lg-5 col-md-6 col-sm-10 mb-4 mb-lg-0">
               <div class="image">
                 <img
                   src="./assests/img/P43H8BA-qli2rq35yoi50zm6bm8mk9u32kflmz119a8swzy2xa.jpg"
-                  alt="image"
-                  class="image-fuild rounded-5"
+                  alt="Bakery Image"
+                  class="img-fluid rounded-5"
                 />
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-              <div class="text pt-5 pb-6 d-flex flex-column">
-                <div class="name">About us</div>
-                <div class="title">
+            <div class="col-lg-6 col-md-6 col-sm-10">
+              <div class="text">
+                <h5 class="name mb-2">About us</h5>
+                <h2 class="title mb-3">
                   Most Loved <br />
-                  Bakery in city
-                </div>
-                <div class="title-desc">
-                  <p>Lorem Ipsum is simply dummy text .</p>
-                </div>
-                <div class="description">
+                  Bakery in City
+                </h2>
+                <p class="title-desc">Lorem Ipsum is simply dummy text.</p>
+                <p class="description">
                   Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry. Lorem Ipsum has been the industry’s
+                  typesetting industry. Lorem Ipsum has been the industry's
                   standard dummy text ever.
-                </div>
-                <div>
-                  <button class="about-btn nav-btn btn mt-4">ABOUT US</button>
-                </div>
+                </p>
+                <button class="about-btn nav-btn btn btn-primary mt-4">
+                  ABOUT US
+                </button>
               </div>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="menu">
         <div class="menu-container">
