--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
       </section>
 
-      <section class="about">
+      <!-- <section class="about">
         <div class="container py-5">
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-5 col-md-6 col-sm-10 mb-4 mb-lg-0">
@@ -254,7 +254,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="menu">
         <div class="menu-container">
