--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
         </div>
       </section>
 
-      <!-- <section class="about">
+      <section class="about">
         <div class="container py-5">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-lg-5 col-md-6 col-sm-10 mb-4 mb-lg-0">
+          <div class="row align-items-center">
+            <!-- Image Column -->
+            <div class="col-lg-6 mb-4 mb-lg-0">
               <div class="image">
                 <img
                   src="./assests/img/P43H8BA-qli2rq35yoi50zm6bm8mk9u32kflmz119a8swzy2xa.jpg"
@@ -234,7 +235,9 @@
                 />
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-10">
+
+            <!-- Text Column -->
+            <div class="col-lg-6">
               <div class="text">
                 <h5 class="name mb-2">About us</h5>
                 <h2 class="title mb-3">
@@ -247,14 +250,12 @@
                   typesetting industry. Lorem Ipsum has been the industry's
                   standard dummy text ever.
                 </p>
-                <button class="about-btn nav-btn btn btn-primary mt-4">
-                  ABOUT US
-                </button>
+                <button class="about-btn nav-btn about-btn btn mt-4">ABOUT US</button>
               </div>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="menu">
         <div class="menu-container">
