--- a/index.html
+++ b/index.html
@@ -222,16 +222,16 @@
         </div>
       </section>
 
-      <section class="about">
-        <div class="container py-5">
+      <section class="about-section py-5">
+        <div class="container">
           <div class="row align-items-center">
             <!-- Image Column -->
             <div class="col-lg-6 mb-4 mb-lg-0">
               <div class="image">
                 <img
                   src="./assests/img/P43H8BA-qli2rq35yoi50zm6bm8mk9u32kflmz119a8swzy2xa.jpg"
-                  alt="Bakery Image"
-                  class="img-fluid rounded-5"
+                  alt="image"
+                  class="img-fluid rounded-5 w-100"
                 />
               </div>
             </div>
@@ -250,12 +250,47 @@
                   typesetting industry. Lorem Ipsum has been the industry's
                   standard dummy text ever.
                 </p>
-                <button class="about-btn nav-btn about-btn btn mt-4">ABOUT US</button>
+                <button class="about-btn nav-btn btn mt-4">ABOUT US</button>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- <section class="about">
+        <div class="container py-5">
+          <div class="about-content d-flex align-items-center">
+      
+            <div class="mb-4">
+              <div class="image">
+                <img
+                  src="./assests/img/P43H8BA-qli2rq35yoi50zm6bm8mk9u32kflmz119a8swzy2xa.jpg"
+                  alt="Bakery Image"
+                  class="img-fluid rounded-5"
+                />
+              </div>
+            </div>
+
+       
+            <div>
+              <div class="text">
+                <h5 class="name mb-2">About us</h5>
+                <h2 class="title mb-3">
+                  Most Loved <br />
+                  Bakery in City
+                </h2>
+                <p class="title-desc">Lorem Ipsum is simply dummy text.</p>
+                <p class="description">
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever.
+                </p>
+                <button class="about-btn nav-btn about-btn btn mt-4">ABOUT US</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
 
       <section class="menu">
         <div class="menu-container">
